--- a/index.html
+++ b/index.html
@@ -7,131 +7,167 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #e3f2fd;
+            background-color: #f0f4f8;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
             text-align: center;
+            color: #2c3e50;
         }
         .container {
-            background: white;
+            max-width: 800px;
+            margin: 0 auto;
+            background: #fff;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-            max-width: 600px;
-            margin: auto;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .question {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+            padding: 15px;
+            background: #ecf0f1;
+            border-radius: 8px;
         }
-        .result {
-            margin-top: 10px;
-            font-weight: bold;
-            color: #d32f2f;
+        .question h3 {
+            color: #2980b9;
+            margin-top: 0;
         }
-        button {
-            background-color: #42a5f5;
-            color: white;
-            border: none;
-            padding: 10px;
-            margin: 5px;
+        label {
+            display: block;
+            margin: 10px 0;
+            padding: 8px;
             border-radius: 5px;
             cursor: pointer;
         }
-        button:hover {
-            background-color: #1e88e5;
+        label:hover {
+            background: #dfe6e9;
         }
-        .summary {
+        input[type="radio"], input[type="checkbox"] {
+            margin-right: 10px;
+        }
+        button {
+            background-color: #27ae60;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #219653;
+        }
+        #restart {
+            background-color: #e74c3c;
+        }
+        #restart:hover {
+            background-color: #c0392b;
+        }
+        #summary {
             display: none;
-            background: white;
+            background: #fff;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-            max-width: 600px;
-            margin: auto;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        .correct { color: #27ae60; }
+        .incorrect { color: #e74c3c; }
     </style>
 </head>
 <body>
-    <div class="container" id="quiz-container">
-        <h2>Sense and Reference Quiz</h2>
-        <div id="questions">
+    <div class="container">
+        <h1>Sense and Reference in Referring Expressions</h1>
+        <form id="quizForm">
             <div class="question">
-                <p>1) The sense of a referring expression can change depending on the context in which it is used.</p>
-                <button onclick="checkAnswer(1, false)">True</button>
-                <button onclick="checkAnswer(1, true)">False</button>
-                <p id="result1" class="result"></p>
+                <h3>1. True or False: The sense of a referring expression can change depending on the context in which it is used.</h3>
+                <label><input type="radio" name="q1" value="true"> True</label>
+                <label><input type="radio" name="q1" value="false"> False</label>
             </div>
             <div class="question">
-                <p>2) A referring expression always picks out the same referent, regardless of who is speaking or the situation.</p>
-                <button onclick="checkAnswer(2, false)">True</button>
-                <button onclick="checkAnswer(2, true)">False</button>
-                <p id="result2" class="result"></p>
+                <h3>2. True or False: A referring expression always picks out the same referent, regardless of who is speaking or the situation.</h3>
+                <label><input type="radio" name="q2" value="true"> True</label>
+                <label><input type="radio" name="q2" value="false"> False</label>
             </div>
             <div class="question">
-                <p>3) Which of the following statements is TRUE about the difference between sense and reference?</p>
-                <button onclick="checkAnswer(3, 'a')">a) Sense refers to the literal meaning of an expression, while reference is determined by context.</button>
-                <button onclick="checkAnswer(3, 'b')">b) Reference and sense are always identical in meaning.</button>
-                <button onclick="checkAnswer(3, 'c')">c) Reference is fixed, while sense changes depending on the speaker’s intention.</button>
-                <button onclick="checkAnswer(3, 'd')">d) Sense and reference are both entirely dependent on contextual cues.</button>
-                <p id="result3" class="result"></p>
+                <h3>3. Which of the following statements is TRUE about the difference between sense and reference?</h3>
+                <label><input type="radio" name="q3" value="a"> a) Sense refers to the literal meaning of an expression, while reference is determined by context.</label>
+                <label><input type="radio" name="q3" value="b"> b) Reference and sense are always identical in meaning.</label>
+                <label><input type="radio" name="q3" value="c"> c) Reference is fixed, while sense changes depending on the speaker’s intention.</label>
+                <label><input type="radio" name="q3" value="d"> d) Sense and reference are both entirely dependent on contextual cues.</label>
             </div>
             <div class="question">
-                <p>4) Which of the following is an example of a referring expression with a variable reference?</p>
-                <button onclick="checkAnswer(4, 'c')">a) The sun</button>
-                <button onclick="checkAnswer(4, 'b')">b) Barack Obama</button>
-                <button onclick="checkAnswer(4, 'c')">c) My teacher</button>
-                <button onclick="checkAnswer(4, 'd')">d) The Eiffel Tower</button>
-                <p id="result4" class="result"></p>
+                <h3>4. Which of the following is an example of a referring expression with a variable reference?</h3>
+                <label><input type="radio" name="q4" value="a"> a) The sun</label>
+                <label><input type="radio" name="q4" value="b"> b) Barack Obama</label>
+                <label><input type="radio" name="q4" value="c"> c) My teacher</label>
+                <label><input type="radio" name="q4" value="d"> d) The Eiffel Tower</label>
             </div>
-            <button onclick="showSummary()">Submit</button>
+            <button type="button" onclick="submitQuiz()">Submit</button>
+        </form>
+        <div id="summary">
+            <h2>Quiz Summary</h2>
+            <p>Total Score: <span id="score"></span>/4</p>
+            <div id="explanations"></div>
+            <button id="restart" onclick="restartQuiz()">Restart</button>
         </div>
     </div>
 
-    <div class="summary" id="summary">
-        <h2>Quiz Summary</h2>
-        <p id="score"></p>
-        <p><b>Explanation:</b></p>
-        <p>1) False - The **sense** of an expression is its stable, dictionary meaning.</p>
-        <p>2) False - A referring expression’s reference can change based on context.</p>
-        <p>3) Correct answer: (a) - **Sense** is the literal meaning, **reference** depends on context.</p>
-        <p>4) Correct answer: (c) - *"My teacher"* refers to different people based on context.</p>
-        <button onclick="restartQuiz()">Restart</button>
-    </div>
-
     <script>
-        let score = 0;
-        function checkAnswer(questionNumber, correctAnswer) {
-            const resultElement = document.getElementById(`result${questionNumber}`);
-            const userAnswer = event.target.textContent.trim().charAt(0).toLowerCase();
-            if (typeof correctAnswer === 'boolean') {
-                if (correctAnswer) {
-                    resultElement.textContent = "Correct!";
-                    resultElement.style.color = "green";
-                    score++;
-                } else {
-                    resultElement.textContent = "Incorrect.";
-                }
-            } else {
-                if (userAnswer === correctAnswer) {
-                    resultElement.textContent = "Correct!";
-                    resultElement.style.color = "green";
-                    score++;
-                } else {
-                    resultElement.textContent = "Incorrect.";
-                }
-            }
-        }
-        function showSummary() {
-            document.getElementById("quiz-container").style.display = "none";
-            document.getElementById("summary").style.display = "block";
-            document.getElementById("score").textContent = "Your total score: " + score + "/4";
-        }
-        function restartQuiz() {
-            score = 0;
-            document.getElementById("quiz-container").style.display = "block";
-            document.getElementById("summary").style.display = "none";
+        const correctAnswers = {
+            q1: 'false',
+            q2: 'false',
+            q3: 'a',
+            q4: 'c'
+        };
+
+        const explanations = {
+            q1: 'The sense of a referring expression is its stable, dictionary meaning and does not change with context. However, reference (what the expression refers to in a given situation) does change with context.',
+            q2: 'A referring expression’s reference can vary depending on the situation. For example, “the teacher” could refer to different individuals depending on who is speaking and which teacher they are referring to.',
+            q3: 'Sense refers to the literal meaning of an expression, while reference is determined by context.',
+            q4: '“My teacher” has a variable reference because different people may use it to refer to different teachers.'
+        };
+
+        function submitQuiz() {
+            let score = 0;
+            const form = document.getElementById('quizForm');
+            const summary = document.getElementById('summary');
+            const explanationsDiv = document.getElementById('explanations');
+            explanationsDiv.innerHTML = '';
+
             for (let i = 1; i <= 4; i++) {
-                document.getElementById(`result${i}`).textContent = "";
+                const userAnswer = form.querySelector(`input[name="q${i}"]:checked`);
+                const correctAnswer = correctAnswers[`q${i}`];
+                const explanation = explanations[`q${i}`];
+                let result = '';
+
+                if (userAnswer && userAnswer.value === correctAnswer) {
+                    score++;
+                    result = `<span class="correct">Correct</span>`;
+                } else {
+                    result = `<span class="incorrect">Incorrect</span>`;
+                }
+
+                explanationsDiv.innerHTML += `
+                    <h3>Question ${i}</h3>
+                    <p>${result} - Your answer: ${userAnswer ? userAnswer.value : 'None'}</p>
+                    <p>Correct answer: ${correctAnswer}</p>
+                    <p>${explanation}</p>
+                `;
             }
+
+            document.getElementById('score').textContent = score;
+            form.style.display = 'none';
+            summary.style.display = 'block';
+        }
+
+        function restartQuiz() {
+            const form = document.getElementById('quizForm');
+            const summary = document.getElementById('summary');
+            form.reset();
+            form.style.display = 'block';
+            summary.style.display = 'none';
         }
     </script>
 </body>
